# jasper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  TODO.md  dev.md  docker-compose.dev.yml  docker-compose.yml
.claude/skills/jasper-plugin/: SKILL.md
.github/workflows/: ci.yml  docker.yml  pages.yml  publish-crates.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  library.rs  model.rs  parser.rs  serialize.rs
dev/: webdav.yml
docs/: gen-demo-library.py  joplin-data-format.md  platform-service-plan.md  plugin-design.md  plugin-spec.md  wasm-app-design.md
plugin-sdk/: Cargo.toml  README.md
plugin-sdk/src/: host.rs  lib.rs  native_host.rs  rt.rs  storage.rs
plugins-examples/: build-wasm.sh
plugins-examples/ai-polish/: Cargo.toml
plugins-examples/s3-storage/: Cargo.toml
plugins-examples/testbed/: Cargo.toml  manifest.toml
plugins-examples/testbed/src/: lib.rs
plugins-examples/trim-trailing/: Cargo.toml  manifest.toml
plugins-examples/trim-trailing/src/: lib.rs
plugins-examples/webdav-storage/: Cargo.toml  manifest.toml
plugins-examples/webdav-storage/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs  cache.rs  config.rs  events.rs  indexer.rs  library.rs  main.rs  model.rs  parser.rs  serialize.rs  web_assets.rs
server/src/plugins/: ai.rs  hooks.rs  host.rs  host_api.rs  install.rs  manifest.rs  mod.rs  routes.rs  runtime.rs  storage.rs
server/src/storage/: local.rs  mod.rs  webdav.rs
wasm/: Cargo.toml
wasm/src/: demo.rs  lib.rs
web/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/e2e/: auth.spec.ts  autosave-race.spec.ts  chat-agent.spec.ts  config.ts  create.spec.ts  edit.spec.ts  editor-hook.spec.ts  helpers.ts  locale.spec.ts  make-fixture.mjs  make-plugin-fixtures.py  market.spec.ts  plugins.spec.ts  search.spec.ts  server.mjs  settings.spec.ts  sidebar.spec.ts  smoke.spec.ts  sse-refresh.spec.ts  tags.spec.ts  wizard-plugin-source.spec.ts  wysiwyg-alt.spec.ts
web/e2e/fixtures/: caps-demo.jplug  locale.jplug  theme.jplug
web/scripts/: demo-library.mjs  gen-theme-assets.py  shoot-auth.mjs  shoot.mjs
web/src/: App.svelte  app.css  icons.css  main.ts  shims.d.ts  wasm-pkg-stub.ts
web/src/lib/: AuthDialog.svelte  Button.svelte  ChatWidget.svelte  ChatWidget.test.ts  CodeMirrorEditor.svelte  Editor.svelte  EditorToolbar.svelte  FolderTree.svelte  Icon.svelte  LangPicker.svelte  NoteList.svelte  NoteTags.svelte  NoteTags.test.ts  NoteView.svelte  PdfViewer.svelte  PendingWriteDialog.svelte  PluginConsent.svelte  PluginPanel.svelte  PluginSidebar.svelte  ResourcePanel.svelte  SchemaForm.svelte  SchemaForm.test.ts  Settings.svelte  SettingsSection.svelte  TagList.svelte  TagList.test.ts  ThemePicker.svelte  UiWidget.svelte  UiWidget.test.ts  WysiwygEditor.svelte  api.test.ts  api.ts  autosave.test.ts  autosave.ts  chatSessions.test.ts  chatSessions.ts  diff.test.ts  diff.ts  dnd.svelte.ts  editorPrefs.ts  (+30 more)
web/src/lib/editor/: build.ts  commands.ts  editorExtensions.ts  handle.ts  livePreview.ts  markdown.test.ts  markdown.ts  setup.ts  theme.ts  types.ts  widgets.ts
web/src/lib/milkdown/: imageBlockAlt.test.ts  imageBlockAlt.ts
web/src/themes/: nord.css  solarized.css
