[package]
name = "joplin-lite"
version = "0.1.0"
edition = "2021"
description = "Lightweight read-only Joplin client — local HTTP server + browser UI"

[dependencies]
joplin-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
thiserror = "2"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
ureq = "2"
roxmltree = "0.20"
base64 = "0.22"
rayon = "1"
getrandom = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
