[package]
name = "jasper"
version = "0.1.0"
edition = "2021"
description = "Lightweight read-only Joplin client — local HTTP server + browser UI"

[dependencies]
jasper-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
thiserror = "2"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
ureq = "2"
roxmltree = "0.20"
base64 = "0.22"
rayon = "1"
getrandom = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
# 单文件打包：把 web/dist 编译进二进制（仅 `--features embed` 时生效）
rust-embed = { version = "8", optional = true, features = ["mime-guess"] }

[dev-dependencies]
# 仅测试用：oneshot 把请求灌进 Router 断言只读守卫行为。
tower = { version = "0.5", features = ["util"] }

[features]
# 开启后 web/dist 在编译期内嵌进二进制，运行时不再依赖磁盘上的前端目录。
# 需在构建前先 `cd web && pnpm build`。默认关闭，开发/源码构建行为不变。
embed = ["dep:rust-embed"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
