[package]
name = "jasper"
version = "2026.7.4"
edition = "2021"
description = "Lightweight read-only Joplin client — local HTTP server + browser UI"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jasper-note/jasper"
publish = false

[dependencies]
jasper-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
thiserror = "2"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
# SSE 变更流（/api/events）：broadcast::Receiver → Stream 适配
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2"
roxmltree = "0.20"
base64 = "0.22"
rayon = "1"
getrandom = "0.2"
# 访问鉴权：加盐迭代 SHA-256 存访问密码哈希。纯 Rust 小依赖；
# 注意必须直接声明——sha2 此前只在 `embed` feature 下作为 rust-embed 的传递依赖存在，
# 默认构建里没有，靠传递会 break 默认构建。
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
# 单文件打包：把 web/dist 编译进二进制（仅 `--features embed` 时生效）
rust-embed = { version = "8", optional = true, features = ["mime-guess"] }
# 插件宿主（仅 `--features plugins` 时编译；默认构建零新增依赖）
wasmi = { version = "1.1", optional = true }
zip = { version = "8", optional = true, default-features = false, features = ["deflate"] }
toml = { version = "1", optional = true }
# host:ai：多提供方 LLM 客户端（anthropic / openai 兼容 + 自定义 base_url；reqwest+rustls 栈，
# 仅 plugins 构建承担，spec 0.3 §6.5）
genai = { version = "0.6", optional = true }

[dev-dependencies]
# 仅测试用：oneshot 把请求灌进 Router 断言只读守卫行为。
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[features]
# 开启后 web/dist 在编译期内嵌进二进制，运行时不再依赖磁盘上的前端目录。
# 需在构建前先 `cd web && pnpm build`。默认关闭，开发/源码构建行为不变。
embed = ["dep:rust-embed"]
# 插件系统（spec 0.3）：wasmi 沙箱宿主 + zip 安装 + manifest 解析 + host:ai（genai）。
plugins = ["dep:wasmi", "dep:zip", "dep:toml", "dep:genai", "jasper-core/serde"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
