[package]
name = "ai-polish"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "示例交互插件：编辑器一键优化正文（一次性 AI 调用，Anthropic Messages API 格式）"

[lib]
crate-type = ["cdylib"]

[dependencies]
jasper-plugin-sdk = { path = "../../plugin-sdk" }

[profile.release]
opt-level = "s"
lto = true
