[package]
name = "s3-storage"
version = "0.1.0"
edition = "2021"
description = "示例存储插件：S3 兼容对象存储（AWS S3 / MinIO / R2…），SigV4 over host:http"

[lib]
crate-type = ["cdylib"]

[dependencies]
jasper-plugin-sdk = { path = "../../plugin-sdk" }
roxmltree = "0.20"
chrono = { version = "0.4", default-features = false, features = ["std"] }
# SigV4：纯 Rust（RustCrypto），wasm32-unknown-unknown 可编译
sha2 = "0.10"
hmac = "0.12"

[profile.release]
opt-level = "s"
lto = true
